Add centralized exception handling and error response structure
- Implemented `GlobalExceptionHandler` with handlers for common exceptions:
  - `InvalidTaskDependencyException` (400)
  - `CircularDependencyException` (400)
  - `IllegalArgumentException` (400)
  - `NullPointerException` and generic exceptions (500)
- Added `ErrorResponse` model for consistent error responses.
- Enhanced `CpmService` to handle circular and invalid dependencies with meaningful exceptions.
- Updated Spring Boot version to 4.0.0 and dependencies.
- Added integration tests for error scenarios.
- Included `@Getter` annotation in services for enhanced DTO access.
- Refined project controller to handle results from new exception handling.